--- a/experiments/2_scenario_resilience.ipynb
+++ b/experiments/2_scenario_resilience.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.245741Z",
-     "start_time": "2025-08-13T11:39:51.240694Z"
+     "end_time": "2025-08-13T11:54:43.709265Z",
+     "start_time": "2025-08-13T11:54:43.702924Z"
     }
    },
    "cell_type": "code",
@@ -18,13 +18,13 @@
    ],
    "id": "ba1a771de1dbd09a",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.309272Z",
-     "start_time": "2025-08-13T11:39:51.300345Z"
+     "end_time": "2025-08-13T11:54:43.784576Z",
+     "start_time": "2025-08-13T11:54:43.769608Z"
     }
    },
    "cell_type": "code",
@@ -42,7 +42,7 @@
     "\n",
     "\n",
     "csv_file_path = '../metrics/exit_join_node.csv'\n",
-    "figure_path = 'figures_join_exit/'\n",
+    "figure_path = '2_figures/'\n",
     "\n",
     "METRICS_FILTER = [\n",
     "    \"unacked_msg\",\n",
@@ -92,13 +92,13 @@
    ],
    "id": "9ad59468cfbddb0a",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.366318Z",
-     "start_time": "2025-08-13T11:39:51.358605Z"
+     "end_time": "2025-08-13T11:54:43.832677Z",
+     "start_time": "2025-08-13T11:54:43.825211Z"
     }
    },
    "cell_type": "code",
@@ -118,13 +118,13 @@
    ],
    "id": "11a013e675f9ce34",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.425127Z",
-     "start_time": "2025-08-13T11:39:51.419839Z"
+     "end_time": "2025-08-13T11:54:43.875598Z",
+     "start_time": "2025-08-13T11:54:43.867654Z"
     }
    },
    "cell_type": "code",
@@ -144,13 +144,13 @@
    ],
    "id": "49d3a5aa0ee773b3",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.482425Z",
-     "start_time": "2025-08-13T11:39:51.477019Z"
+     "end_time": "2025-08-13T11:54:43.949059Z",
+     "start_time": "2025-08-13T11:54:43.943467Z"
     }
    },
    "cell_type": "code",
@@ -163,13 +163,13 @@
    ],
    "id": "79e279e8229dca92",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:51.553045Z",
-     "start_time": "2025-08-13T11:39:51.533947Z"
+     "end_time": "2025-08-13T11:54:44.030191Z",
+     "start_time": "2025-08-13T11:54:44.002474Z"
     }
    },
    "cell_type": "code",
@@ -229,13 +229,13 @@
    ],
    "id": "7d244f1fde9941e3",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:53.555102Z",
-     "start_time": "2025-08-13T11:39:51.594186Z"
+     "end_time": "2025-08-13T11:54:45.893952Z",
+     "start_time": "2025-08-13T11:54:44.061524Z"
     }
    },
    "cell_type": "code",
@@ -293,13 +293,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T11:39:53.573739Z",
-     "start_time": "2025-08-13T11:39:53.570879Z"
+     "end_time": "2025-08-13T11:54:45.903489Z",
+     "start_time": "2025-08-13T11:54:45.900710Z"
     }
    },
    "cell_type": "code",
