split entropy into two plots

--- a/experiments/3_computational_resources.ipynb
+++ b/experiments/3_computational_resources.ipynb
@@ -322,7 +322,7 @@
     "                    ha='center',\n",
     "                    va='center',\n",
     "                    fontsize=10,\n",
-    "                    color='white'\n",
+    "                    color='white'5\n",
     "                )\n",
     "\n",
     "        bottoms += vals\n",
