removed plots from repo

--- a/experiments/3_computational_resources.ipynb
+++ b/experiments/3_computational_resources.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.395379Z",
-     "start_time": "2025-08-15T10:53:01.388831Z"
+     "end_time": "2025-08-21T05:34:31.175728Z",
+     "start_time": "2025-08-21T05:34:30.453544Z"
     }
    },
    "cell_type": "code",
@@ -18,13 +18,13 @@
    ],
    "id": "3b3d515821225aaf",
    "outputs": [],
-   "execution_count": 141
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.471898Z",
-     "start_time": "2025-08-15T10:53:01.464226Z"
+     "end_time": "2025-08-21T05:34:31.350831Z",
+     "start_time": "2025-08-21T05:34:31.346315Z"
     }
    },
    "cell_type": "code",
@@ -65,13 +65,13 @@
    ],
    "id": "673c4b2076f4b5e6",
    "outputs": [],
-   "execution_count": 142
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.543743Z",
-     "start_time": "2025-08-15T10:53:01.537659Z"
+     "end_time": "2025-08-21T05:34:31.412741Z",
+     "start_time": "2025-08-21T05:34:31.406873Z"
     }
    },
    "cell_type": "code",
@@ -93,13 +93,29 @@
    ],
    "id": "bb34622aa4057bfa",
    "outputs": [],
-   "execution_count": 143
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.603888Z",
-     "start_time": "2025-08-15T10:53:01.596042Z"
+     "end_time": "2025-08-21T05:34:31.470266Z",
+     "start_time": "2025-08-21T05:34:31.465318Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "if not os.path.exists(figure_path):\n",
+    "    os.makedirs(figure_path)"
+   ],
+   "id": "3cacc0d3c759dd77",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-21T05:34:31.529822Z",
+     "start_time": "2025-08-21T05:34:31.521714Z"
     }
    },
    "cell_type": "code",
@@ -119,13 +135,13 @@
    ],
    "id": "4bec4ad63d353b50",
    "outputs": [],
-   "execution_count": 144
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.657629Z",
-     "start_time": "2025-08-15T10:53:01.651922Z"
+     "end_time": "2025-08-21T05:34:31.589973Z",
+     "start_time": "2025-08-21T05:34:31.583050Z"
     }
    },
    "cell_type": "code",
@@ -140,13 +156,13 @@
    ],
    "id": "e9a5380cc85b0d4b",
    "outputs": [],
-   "execution_count": 145
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.714069Z",
-     "start_time": "2025-08-15T10:53:01.706686Z"
+     "end_time": "2025-08-21T05:34:31.649838Z",
+     "start_time": "2025-08-21T05:34:31.641164Z"
     }
    },
    "cell_type": "code",
@@ -169,13 +185,13 @@
    ],
    "id": "559c20a9a49e002d",
    "outputs": [],
-   "execution_count": 146
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.816270Z",
-     "start_time": "2025-08-15T10:53:01.809512Z"
+     "end_time": "2025-08-21T05:34:31.703585Z",
+     "start_time": "2025-08-21T05:34:31.697171Z"
     }
    },
    "cell_type": "code",
@@ -190,13 +206,13 @@
    ],
    "id": "246bb1e5ce932a51",
    "outputs": [],
-   "execution_count": 147
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:01.917938Z",
-     "start_time": "2025-08-15T10:53:01.906335Z"
+     "end_time": "2025-08-21T05:34:31.764323Z",
+     "start_time": "2025-08-21T05:34:31.752846Z"
     }
    },
    "cell_type": "code",
@@ -240,13 +256,13 @@
    ],
    "id": "c20858718ecdb6bd",
    "outputs": [],
-   "execution_count": 148
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:02.014609Z",
-     "start_time": "2025-08-15T10:53:02.002541Z"
+     "end_time": "2025-08-21T05:34:31.821083Z",
+     "start_time": "2025-08-21T05:34:31.809484Z"
     }
    },
    "cell_type": "code",
@@ -275,13 +291,13 @@
    ],
    "id": "dc27ff1877669ef6",
    "outputs": [],
-   "execution_count": 149
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:02.105996Z",
-     "start_time": "2025-08-15T10:53:02.101086Z"
+     "end_time": "2025-08-21T05:34:31.868872Z",
+     "start_time": "2025-08-21T05:34:31.864108Z"
     }
    },
    "cell_type": "code",
@@ -293,13 +309,13 @@
    ],
    "id": "9793bc3152d739b5",
    "outputs": [],
-   "execution_count": 150
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:02.160263Z",
-     "start_time": "2025-08-15T10:53:02.150387Z"
+     "end_time": "2025-08-21T05:34:31.929935Z",
+     "start_time": "2025-08-21T05:34:31.919620Z"
     }
    },
    "cell_type": "code",
@@ -337,13 +353,13 @@
    ],
    "id": "47cad9dc911d3a57",
    "outputs": [],
-   "execution_count": 151
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:02.823287Z",
-     "start_time": "2025-08-15T10:53:02.204530Z"
+     "end_time": "2025-08-21T05:34:32.629304Z",
+     "start_time": "2025-08-21T05:34:31.977488Z"
     }
    },
    "cell_type": "code",
@@ -356,13 +372,13 @@
    ],
    "id": "4e1312eb08974a68",
    "outputs": [],
-   "execution_count": 152
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:03.542319Z",
-     "start_time": "2025-08-15T10:53:02.854396Z"
+     "end_time": "2025-08-21T05:34:33.309250Z",
+     "start_time": "2025-08-21T05:34:32.646818Z"
     }
    },
    "cell_type": "code",
@@ -425,13 +441,13 @@
    ],
    "id": "1bd699b62fe32a45",
    "outputs": [],
-   "execution_count": 153
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:03.586686Z",
-     "start_time": "2025-08-15T10:53:03.577592Z"
+     "end_time": "2025-08-21T05:34:33.398423Z",
+     "start_time": "2025-08-21T05:34:33.387097Z"
     }
    },
    "cell_type": "code",
@@ -475,13 +491,13 @@
    ],
    "id": "4504d2f516f8d7c0",
    "outputs": [],
-   "execution_count": 154
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:03.995758Z",
-     "start_time": "2025-08-15T10:53:03.612244Z"
+     "end_time": "2025-08-21T05:34:33.901803Z",
+     "start_time": "2025-08-21T05:34:33.442046Z"
     }
    },
    "cell_type": "code",
@@ -508,13 +524,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 155
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:04.181055Z",
-     "start_time": "2025-08-15T10:53:04.049854Z"
+     "end_time": "2025-08-21T05:34:34.006687Z",
+     "start_time": "2025-08-21T05:34:33.998453Z"
     }
    },
    "cell_type": "code",
@@ -560,13 +576,13 @@
    ],
    "id": "e57a0a987f48b199",
    "outputs": [],
-   "execution_count": 156
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:04.814134Z",
-     "start_time": "2025-08-15T10:53:04.229047Z"
+     "end_time": "2025-08-21T05:34:34.628907Z",
+     "start_time": "2025-08-21T05:34:34.066967Z"
     }
    },
    "cell_type": "code",
@@ -589,13 +605,13 @@
    ],
    "id": "4dddb11d19400487",
    "outputs": [],
-   "execution_count": 157
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:05.381189Z",
-     "start_time": "2025-08-15T10:53:04.851057Z"
+     "end_time": "2025-08-21T05:34:35.176516Z",
+     "start_time": "2025-08-21T05:34:34.660660Z"
     }
    },
    "cell_type": "code",
@@ -621,13 +637,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 158
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-15T10:53:05.898983Z",
-     "start_time": "2025-08-15T10:53:05.418449Z"
+     "end_time": "2025-08-21T05:34:35.691401Z",
+     "start_time": "2025-08-21T05:34:35.238429Z"
     }
    },
    "cell_type": "code",
@@ -653,7 +669,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 159
+   "execution_count": 20
   }
  ],
  "metadata": {
