--- a/experiments/2_scenario_resilience.ipynb
+++ b/experiments/2_scenario_resilience.ipynb
@@ -3,12 +3,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.462801Z",
-     "start_time": "2025-08-13T12:40:44.764326Z"
+     "end_time": "2025-08-21T05:34:28.264767Z",
+     "start_time": "2025-08-21T05:34:27.531696Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "import os\n",
     "from os.path import isfile, join\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,8 +24,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.619148Z",
-     "start_time": "2025-08-13T12:40:45.610374Z"
+     "end_time": "2025-08-21T05:34:28.418208Z",
+     "start_time": "2025-08-21T05:34:28.409334Z"
     }
    },
    "cell_type": "code",
@@ -97,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.681198Z",
-     "start_time": "2025-08-13T12:40:45.675542Z"
+     "end_time": "2025-08-21T05:34:28.481953Z",
+     "start_time": "2025-08-21T05:34:28.476566Z"
     }
    },
    "cell_type": "code",
@@ -123,8 +124,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.742521Z",
-     "start_time": "2025-08-13T12:40:45.735046Z"
+     "end_time": "2025-08-21T05:34:28.536545Z",
+     "start_time": "2025-08-21T05:34:28.532942Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "if not os.path.exists(figure_path):\n",
+    "    os.makedirs(figure_path)"
+   ],
+   "id": "e3492cda0b4e48f6",
+   "outputs": [],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-08-21T05:34:28.599982Z",
+     "start_time": "2025-08-21T05:34:28.592390Z"
     }
    },
    "cell_type": "code",
@@ -144,13 +161,13 @@
    ],
    "id": "49d3a5aa0ee773b3",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.797861Z",
-     "start_time": "2025-08-13T12:40:45.792561Z"
+     "end_time": "2025-08-21T05:34:28.653546Z",
+     "start_time": "2025-08-21T05:34:28.648Z"
     }
    },
    "cell_type": "code",
@@ -163,13 +180,13 @@
    ],
    "id": "79e279e8229dca92",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:45.870127Z",
-     "start_time": "2025-08-13T12:40:45.849070Z"
+     "end_time": "2025-08-21T05:34:28.723797Z",
+     "start_time": "2025-08-21T05:34:28.704526Z"
     }
    },
    "cell_type": "code",
@@ -229,13 +246,13 @@
    ],
    "id": "7d244f1fde9941e3",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:47.700282Z",
-     "start_time": "2025-08-13T12:40:45.905440Z"
+     "end_time": "2025-08-21T05:34:30.646785Z",
+     "start_time": "2025-08-21T05:34:28.760788Z"
     }
    },
    "cell_type": "code",
@@ -293,13 +310,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-13T12:40:47.720945Z",
-     "start_time": "2025-08-13T12:40:47.718520Z"
+     "end_time": "2025-08-21T05:34:30.661402Z",
+     "start_time": "2025-08-21T05:34:30.658541Z"
     }
    },
    "cell_type": "code",
