--- a/experiments/1_general_metrics.ipynb
+++ b/experiments/1_general_metrics.ipynb
@@ -135,11 +135,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# Time per scenario\n",
-    "# 10 rounds\n",
-    "# y: time per whole scenario\n",
-    "# x: delay in seconds\n",
-    "\n",
     "mus = np.linspace(0.003, 0.01, num=5)\n",
     "\n",
     "rt_files = get_filenames_in_folder(join(metrics_path, \"run_time\"))\n",
@@ -166,13 +161,11 @@
     "\n",
     "ax1.set_title(\"Time and Bytes per Scenario\")\n",
     "\n",
-    "# First y-axis: Scenario time\n",
     "ax1.plot(mus[:len(rt_list)], rt_list, marker='o', color=dark_blue, label='Round Time', linewidth=0.8)\n",
     "ax1.set_xlabel(\"Average Outbox Interval (s)\")\n",
     "ax1.set_ylabel(\"Average Round Time (s)\", color=dark_blue)\n",
     "ax1.tick_params(axis='y', labelcolor=dark_blue)\n",
     "\n",
-    "# Second y-axis: Bytes per second\n",
     "ax2 = ax1.twinx()\n",
     "ax2.plot(mus[:len(bytes_s)], bytes_s, marker='s', color=wine_red, label='Bytes/sec', linewidth=0.8)\n",
     "ax2.set_ylabel(\"Average Bytes/sec\", color=wine_red)\n",
@@ -189,7 +182,6 @@
     "for line in legend.get_lines():\n",
     "    line.set_linewidth(3.0)\n",
     "\n",
-    "# Save and show\n",
     "plt.savefig(join(figure_path, \"time-and-bytes-per-scenario.pdf\"), bbox_inches=\"tight\", dpi=600)\n",
     "plt.show()\n"
    ],
@@ -218,20 +210,9 @@
     }
    },
    "source": [
-    "# y: RTT\n",
-    "# x:\n",
-    "#   - delay in seconds\n",
-    "#   - number of hops\n",
-    "\n",
-    "\n",
     "def get_avg_rtt(df):\n",
     "    df['timestamp'] = pd.to_datetime(df['timestamp'], format='ISO8601')\n",
     "\n",
-    "    # max_peers = df[df['field'] == \"active_peers\"][\"value\"].max()\n",
-    "    # start, end = get_time_interval(df, \"active_peers\", max_peers)\n",
-    "\n",
-    "    # df_interval = df[(df['timestamp'] > start) & (df['timestamp'] < end)]\n",
-    "    # df_interval = df\n",
     "    rtt_per_node = df[(df['field'] == \"last_rtt\") & (df['value'] != 0)].groupby('node')\n",
     "    mean_per_node = rtt_per_node['value'].apply(lambda x: x.unique().mean())\n",
     "    mean = mean_per_node.mean()\n",
@@ -250,7 +231,6 @@
    "cell_type": "code",
    "source": [
     "def plot_combined_rtt_and_bytes_subplots(x_sets, x_labels, folders, image_prefix):\n",
-    "    # Create 1 row with 3 columns for RTT\n",
     "    fig_rtt, axs_rtt = plt.subplots(1, 3, figsize=FIGURE_SIZE, sharey=True)\n",
     "    fig_bytes, axs_bytes = plt.subplots(1, 3, figsize=FIGURE_SIZE, sharey=True)\n",
     "    fig_total_bytes, axs_total_bytes = plt.subplots(1, 3, figsize=FIGURE_SIZE, sharey=True)\n",
@@ -267,7 +247,7 @@
     "        y_total_bytes = np.array([get_total_msgbytes(df) for df in df_files])\n",
     "        y_bytes_s = y_total_bytes / rt_list\n",
     "\n",
-    "        # Ensure all y values match x_vals in length\n",
+    "        # ensure all y values match x_vals in length\n",
     "        n = min(len(df_files), len(x_vals))\n",
     "        x_vals = x_vals[:n]\n",
     "        y_rtt = y_rtt[:n]\n",
@@ -383,16 +363,6 @@
    "execution_count": 8
   },
   {
-   "cell_type": "markdown",
-   "id": "98d8ad37",
-   "metadata": {},
-   "source": [
-    "The output rate of a node is solely determined by the average output rate parameter, therefore the curve is completely flat for max hops and otubox size\n",
-    "\n",
-    "Therefore, total bytes increase with maximum hops and it decreases all the same with avg outbox interval, bc it controls the amount of cover traffic."
-   ]
-  },
-  {
    "cell_type": "code",
    "id": "71dba5dc",
    "metadata": {
@@ -408,7 +378,6 @@
     "        sum += p * np.log2(p)\n",
     "    return -sum\n",
     "\n",
-    "# the entropy of matching incoming message to outgoing message in a singular node\n",
     "def entropy_in_out(outbox_size, max_hops):\n",
     "    terminated = 1/max_hops\n",
     "    relayed = 1 - terminated\n",
@@ -416,8 +385,6 @@
     "    events = relayed_events + [terminated]\n",
     "    return entropy(events)\n",
     "\n",
-    "# X e nodes - start node\n",
-    "# tracking a fragment to its recipient\n",
     "def entropy_recipient(max_hops, nr_nodes):\n",
     "    n_events = 0\n",
     "    for hops in range(1, max_hops+1):\n",
@@ -827,19 +794,6 @@
     }
    ],
    "execution_count": 13
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-08-21T05:34:32.540559Z",
-     "start_time": "2025-08-21T05:34:32.537955Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "4c19a4fae507d11b",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
