--- a/experiments/3_computational_resources.ipynb
+++ b/experiments/3_computational_resources.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "LINE_STYLE = {\n",
     "    \"linewidth\": 1.5,\n",
-    "    \"linestyle\": \"-\"  # solid lines\n",
+    "    \"linestyle\": \"-\"\n",
     "}\n",
     "\n",
     "GRID_STYLE = {\n",
